2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix previous patch.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/JSON/Report.pm: Take a trace_log as argument.
	* perl/Amanda/JSON/Status.pm: Take a amdump_log as argument.
	* perl/Amanda/Message.pod: Amndmp use 200000 message code.
	* perl/Makefile.am: Add perl/Amanda/Amdump.pm and
			        perl/Amanda/JSON/Amdump.pm
	* server-src/amdump.pl: Move all codes to a perl module.
	* perl/Amanda/Amdump.pm: New module for running a dump.
	* perl/Amanda/JSON/Amdump.pm: New JSON module for running a dump.

2013-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Parse header without dle_str.

2013-09-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Label.pm: Merge Label.pod.
	* perl/Amanda/Message.pm: Merge Message.pod.
	* perl/Amanda/Label.pod, perl/Amanda/Message.pod: Remove files.
	* perl/Makefile.am (EXTRA_DIST): Remove Label.pod and Message.pod.

2013-09-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Add the "ST:storage" in many taper log lines.

2013-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Remove double increment of count.
	* server-src/amcheck.c: Do not set pw which is never used.
	* server-src/find.c: Do not set dp which is never used.

2013-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl, server-src/taper.pl: Remove useless
	  debugging.

2013-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix STORAGE_DEVICE_OUTPUT_BUFFER_SIZE init.
	* device-src/xfer-dest-taper-splitter.c: Abort with better message if
	  memory allocation fail.
	* server-src/amcheck.c: Check device-output-buffer-size is nmot larger
	  than physical memory.

2013-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Message.pm: Add a 'severity' to a message.
	* perl/Amanda/Message.pod: Document severity.