@@ -40,6 +40,7 @@ use Amanda::MainLoop;
 use Amanda::Paths;
 use Amanda::Process;
 use Amanda::Util qw( :constants );
+use Amanda::JSON::Amdump;
 use Amanda::JSON::Config;
 use Amanda::JSON::Changer;
 use Amanda::JSON::DB::Catalog;
@@ -58,6 +59,8 @@ use Data::Dumper;
 
 my $rpc = Amanda::JSON::RPC::Dispatcher->new;
 
+
+$rpc->register( 'Amanda::JSON::Amdump::run', \&Amanda::JSON::Amdump::run );
 
 $rpc->register( 'Amanda::JSON::Config::getconf_byname', \&Amanda::JSON::Config::getconf_byname );
 $rpc->register( 'Amanda::JSON::Config::config_dir_relative', \&Amanda::JSON::Config::config_dir_relative );
